# tg-humanbot

./: .gitignore  README.md  creating.py  dataset.py  main.py  model.py  parser.py  requirements.txt  train.py
cpp_tgbot/: CMakeLists.txt  main.cpp
data/: prompts.txt
gpt/: dataset.py  gpt.py
output/: gpt_results.txt
tg-parser/: chat_history.txt  parser.py
tg-parser/train_data/: solid_chat.txt  split_chat.txt
